force-app/main/default/objects/Account1__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>My Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Account1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account1 ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>